samples/_failures_safe/1761129630_76f604_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41f57b80.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_41f57b80.c:161:9: error: expected declaration or statement at end of input
  161 |         }
      |         ^
./samples/SAFE/__tmp_41f57b80.c:161:9: error: expected declaration or statement at end of input
